fix alignments

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -31,17 +31,6 @@ input {
   margin-bottom: 16px;
 }
 
-.header {
-  display: flex;
-  flex-flow: row;
-}
-
-.footer {
-  display: flex;
-  flex-flow: row;
-  background-color: #eeeeee;
-}
-
 .content {
   display: flex;
   flex-flow: column;
@@ -49,7 +38,44 @@ input {
   align-items: center;
 }
 
-li {
+.header {
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  padding: 8px;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-between;
+  background-color: #eeeeee;
+  padding: 8px;
+}
+
+.header-container {
+  display: flex;
+  width: 100%;
+}
+
+.footer-container {
+  display: flex;
+  width: 100%;
+}
+
+.left-links {
+  display: flex;
+  flex-flow: row;
+}
+
+.right-links {
+  display: flex;
+  flex-flow: row;
+}
+
+ul {
   list-style-type: none;
 }
 
